<resources>
    <string name="app_name">Dkd Lab</string>
    <string name="user_name_star">User name<font color='#FF0000'> *</font></string>
    <string name="password_star">Password<font color='#FF0000'> *</font></string>
    <string name="search">Search name/barcode here</string>
    <string name="lab_agent_name_star">Lab agent name<font color='#FF0000'> *</font></string>
    <string name="farmer_name">Farmer name</string>
    <string name="farmer_mobile_number">Farmer mobile number</string>
    <string name="serial_number_star">Sample serial number<font color='#FF0000'> *</font></string>
    <string name="select_soil_type">Select soil type</string>
    <string name="enter_agent_name">Please enter agent name</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_mobile_number">Please enter mobile number</string>
    <string name="enter_scan_barcode">Please enter/scan barcode</string>
    <string name="barcode_exist">Report already created for that barcode</string>
    <string name="enter_result">Please enter result</string>
    <string name="no_records_found">No result found!</string>
    <string name="scan_sample_code_star">Sample barcode<font color='#FF0000'> *</font></string>
    <string name="please_wait">Please wait...</string>
    <string name="to_exit">Please click BACK again to exit</string>
    <string name="devices">USB Devices</string>
    <string name="network_error">Network Error!</string>
    <string name="error">Error!</string>
    <string name="no_internet">Seems like your device does not have an active internet connection!! Please check your connectivity and try again.</string>
    <string name="app_alert">App Alert!</string>
    <string name="internal_server_error">Internal server error!</string>
    <string name="enter_10_digit_mobile_number">Please enter 10 digit mobile number</string>
    <string name="please_enter_valid_mobile_number">Please enter valid mobile number</string>
    <string name="enter_role">Enter user role</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="farm_size_star">Farm size<font color='#FF0000'> *</font></string>
    <string name="farm_size_acre">Farm size(Acre)</string>
    <string name="farm_size">Farm size</string>
    <string name="nitrogen_star">Nitrogen<font color='#FF0000'> *</font></string>
    <string name="nitrogen">Nitrogen value</string>
    <string name="phosphorus_star">Phosphorus<font color='#FF0000'> *</font></string>
    <string name="phosphorus">Phosphorus value</string>
    <string name="potassium_star">Potassium<font color='#FF0000'> *</font></string>
    <string name="potassium">Potassium value</string>
    <string name="organic_carbon_star">Organic carbon<font color='#FF0000'> *</font></string>
    <string name="organic_carbon">Organic carbon value</string>
    <string name="nitrogen_value">Nitrogen</string>
    <string name="phosphorus_value">Phosphorus</string>
    <string name="potassium_value">Potassium</string>
    <string name="organic_carbon_value">Organic Carbon</string>
    <string name="pH_value">pH</string>
    <string name="hectare">Hectare</string>
    <string name="urea">Urea</string>
    <string name="dap">Dap</string>
    <string name="mop">Mop</string>
    <string name="ssp">Ssp</string>
    <string name="kg_acre">KG</string>
    <string name="fym">FYM</string>
    <string name="rock_phosphate">Rock Phosphate</string>
    <string name="psb">PSB</string>
    <string name="kmb">KMB</string>
    <string name="ml">ml</string>
    <string name="ton">Ton</string>
    <string name="quintal">Quintal</string>
    <string name="farmer_name_star">Farmer name<font color='#FF0000'> *</font></string>
    <string name="enter_farmer_name">Enter farmer name</string>
    <string name="father_name_star">Father name<font color='#FF0000'> *</font></string>
    <string name="enter_father_name">Enter father name</string>
    <string name="land_area_acre_star">Land area (Acre)<font color='#FF0000'>*</font></string>
    <string name="view_khasra_location"><u>Khasra Location</u></string>
    <string name="category">Category</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="select_gender">Select gender</string>
    <string name="select_gender_star">Select gender<font color='#FF0000'> *</font></string>
    <string name="select_category">Select category</string>
    <string name="select_category_star">Select category<font color='#FF0000'> *</font></string>
    <string name="enter_farmer_mobile_number_star">Farmer mobile number<font color='#FF0000'> *</font></string>
    <string name="select_last_crop_name_star">Select crop name<font color='#FF0000'> *</font></string>
    <string name="search_crop_name">Search crop name</string>
    <string name="select_irrigation_type_star">Select irrigation sources<font color='#FF0000'> *</font></string>
    <string name="farmer_photo">Farmer Photo</string>
    <string name="find_khasra_number_star">Find khasra number<font color='#FF0000'> *</font></string>
    <string name="ok_caps">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="validation_error">Validation Error!</string>
    <string name="enter_valid_number">Please enter your 10 digit mobile number</string>
    <string name="get_otp">GET OTP</string>
    <string name="login">LOGIN</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="don_t_received_otp">Don\'t received otp?</string>
    <string name="verify">VERIFY</string>
    <string name="please_enter_otp_received_on_your_mobile">Please enter OTP received on your mobile</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="verification">OTP VERIFICATION</string>
    <string name="lan_hindi"> हिंदी (Hindi)</string>
    <string name="lang_english">English</string>
    <string name="new_sample">NEW SAMPLE</string>
    <string name="update_sample">UPDATE SAMPLE</string>
    <string name="update_survey">UPDATE SURVEY</string>
    <string name="soil_sample_details">SOIL SAMPLE DETAILS</string>
    <string name="father_name">Father name</string>
    <string name="remarked">Remarked</string>
    <string name="urs_name">Name</string>
    <string name="pmkisan_list">PM kisan</string>
    <string name="cancel">cancel</string>
    <string name="update">Update</string>
    <string name="record_updated">Record successfully updated</string>
    <string name="khasra">Khasra</string>
    <string name="lab_id">Lab Id</string>
    <string name="enter_name_or_khasra_number">Enter farmer name or Khasra number</string>
    <string name="save">SAVE</string>
    <string name="full_name">Full name</string>
    <string name="enter_name">Enter name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="alternate_mobile_number">Alternate mobile number</string>
    <string name="mobile_number_star">Mobile number<font color='#FF0000'> *</font></string>
    <string name="enter_farmer_mobile_number">Farmer mobile number</string>
    <string name="enter_farmer_alternate_mobile_number">Farmer alternate mobile number</string>
    <string name="enter_correct_mobile_number">Enter correct mobile number</string>
    <string name="please_enter_mobile_number">Please enter farmer mobile number</string>
    <string name="khasra_no">Khasra no.</string>
    <string name="khasra_number">Khasra number</string>
    <string name="khasra_number_star">Khasra number<font color='#FF0000'> *</font></string>
    <string name="find_khasra_number">Find khasra number</string>
    <string name="khasra_location_star">Khasra location<font color='#FF0000'> *</font></string>
    <string name="khasra_location">Khasra location</string>
    <string name="Khasra_number_required">Khasra number required</string>
    <string name="total_land_size">Total nand Size</string>
    <string name="enter_land_size">Enter land area</string>
    <string name="sample_date">Sample date</string>
    <string name="select_sample_date">Select sample date</string>
    <string name="enter_last_crop_name">Enter crop name</string>
    <string name="enter_rabi_crop_name">Enter rabi crop name</string>
    <string name="enter_kharif_crop_name">Enter kharif crop name</string>
    <string name="enter_current_crop_name">Enter current crop name</string>
    <string name="land_type">Land type</string>
    <string name="record_successfully_saved">Record successfully saved</string>
    <string name="soil_sample_successfully_collected">Soil sample successfully collected</string>
    <string name="record_successfully_updated">Record successfully updated</string>
    <string name="soil_report_has_been_generated_successfully">soil report has been generated successfully</string>
    <string name="login_text_message1">We will send you an</string>
    <string name="login_text_message2">One Time Password</string>
    <string name="login_text_message3">on this mobile number</string>
    <string name="enter_land_type">Enter land type</string>
    <string name="enter_sample_date">Sample collection date</string>
    <string name="village_code_not_found">Village code not found!</string>
    <string name="search_khasra">Search khasra</string>
    <string name="current_location">Current location</string>
    <string name="enter_n_value_min">Enter min nitrogen value</string>
    <string name="enter_p_value_min">Enter min phosphorus value</string>
    <string name="enter_k_value_min">Enter min potassium value</string>
    <string name="enter_oc_value_min">Enter min OC value</string>
    <string name="enter_ph_value_min">Enter min pH value</string>
    <string name="enter_n_value_max">Enter max nitrogen value</string>
    <string name="enter_p_value_max">Enter max phosphorus value</string>
    <string name="enter_k_value_max">Enter max potassium value</string>
    <string name="enter_oc_value_max">Enter max OC value</string>
    <string name="enter_ph_value_max">Enter max pH value</string>
    <string name="soil_report">Generate Soil Report</string>
    <string name="please_select_location">Please select location</string>
    <string name="state_star">State<font color='#FF0000'> *</font></string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="district_star">District<font color='#FF0000'> *</font></string>
    <string name="tahsil">Tahsil</string>
    <string name="block">Block</string>
    <string name="block_star">Block<font color='#FF0000'> *</font></string>
    <string name="village">Village</string>
    <string name="enter_state_name">Enter State name</string>
    <string name="enter_district_name">Enter District name</string>
    <string name="select_crop">Select crop</string>
    <string name="name_star">User name<font color='#FF0000'> *</font></string>
    <string name="select_village_name_star">Village name<font color='#FF0000'> *</font></string>
    <string name="user_role_star">User role<font color='#FF0000'> *</font></string>
    <string name="acre">Acre</string>
    <string name="crop">Crop</string>
    <string name="select_state_star">Select state<font color='#FF0000'> *</font></string>
    <string name="select_district_star">Select district<font color='#FF0000'> *</font></string>
    <string name="select_block_star">Select block<font color='#FF0000'> *</font></string>
    <string name="farmsize">Farm size:</string>
    <string name="add_crop">Add Crop</string>
    <string name="_22_24_kg">22-24 KG</string>
    <string name="recomanded_seed">Recommended seed</string>
    <string name="select">Select</string>
</resources>