<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/include"
        layout="@layout/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha=".3"
            android:background="#B8B894" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/layout1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/npk_bg"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="2dp"
                android:paddingRight="20dp"
                android:paddingBottom="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/farmsize"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/txt_formValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:text=""
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/acre"
                        android:textColor="@color/textColor"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/select_crop"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/videos_text_bg"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:text="@string/crop"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:text=":"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <!-- <Spinner
                     android:id="@+id/spinnerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-->
                <EditText
                    android:id="@+id/edtCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_drop_down"
                    android:drawablePadding="10dp"
                    android:editable="false"
                    android:focusable="false"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/select"
                    android:imeOptions="actionDone"
                    android:inputType="text|textCapSentences"
                    android:padding="@dimen/fab_margin"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layoutSeedRecomandation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/videos_text_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txtLandAreaAcre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:text="12 acre"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:visibility="gone">

                </TextView>

                <TextView
                    android:id="@+id/textRecomandation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/recomanded_seed"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textSeedWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:text="@string/_22_24_kg"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>


            </androidx.appcompat.widget.LinearLayoutCompat>


            <com.agro.dkdlab.custom.ElasticLayout
                android:id="@+id/ButtonAddCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_bg"
                android:gravity="center"
                android:onClick="addCrop"
                android:visibility="gone">

                <TextView
                    android:id="@+id/txt_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/add_crop"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </com.agro.dkdlab.custom.ElasticLayout>

        </LinearLayout>
    </FrameLayout>


</LinearLayout>