<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ui.view.login.RegisterUserActivity">

    <include
        android:id="@+id/include"
        layout="@layout/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/npk_bg"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutUserName"
                style="@style/TextInputLayoutBoxColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_top_margin"
                android:hint="@string/name_star"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:hint="Ex. Abc"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName|textCapWords"
                    android:textSize="@dimen/input_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutMobile"
                style="@style/TextInputLayoutBoxColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_top_margin"
                android:hint="@string/mobile_number_star"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="Ex.6545xxxxxx"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textSize="@dimen/input_text_size" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutRole"
                style="@style/TextInputLayoutBoxColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_marging_15"
                android:hint="@string/user_role_star"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextRole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:imeOptions="actionNext"
                    android:inputType="text|textCapWords"
                    android:text="Guest"
                    android:textSize="@dimen/input_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/select_state_star"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerState"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/select_district_star"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/select_block_star"
                android:textColor="@color/textColor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerBlock"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutVillage"
                style="@style/TextInputLayoutBoxColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/content_marging_15"
                android:hint="@string/select_village_name_star"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:expandedHintEnabled="false"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVillage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="Ex. Shantarashah"
                    android:imeOptions="actionDone"
                    android:inputType="text|textCapWords"
                    android:textSize="@dimen/input_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.agro.dkdlab.custom.ElasticLayout
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_background"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </com.agro.dkdlab.custom.ElasticLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>